ready to be tested as microservice

--- a/docker-test/dockerfiles/Dockerfile
+++ b/docker-test/dockerfiles/Dockerfile
@@ -3,7 +3,8 @@
 # --- Stage 1: Builder ---
 # This stage installs all dependencies, including test and mock libraries,
 # and builds the package.
-FROM python:3.9-slim-bullseye AS builder
+# Using official Raspberry Pi OS Docker image with Python 3.11 and Debian 12 (bookworm)
+FROM dtcooper/raspberrypi-os:python3.11-bookworm AS builder
 
 WORKDIR /app
 
@@ -12,9 +13,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Install the mock library for RPi.GPIO.
-# smbus2 is pure Python and can be installed directly.
-RUN pip install fake-rpigpio
+# Note: RPi.GPIO and related libraries are already available in the 
+# official Raspberry Pi OS Docker image, no need for fake-rpigpio
 
 # Copy project files
 COPY pyproject.toml README.md ./
@@ -28,7 +28,8 @@ RUN pip install .[actuator,sensor]
 # --- Stage 2: Final ---
 # This stage creates the final, lean image. It copies the installed
 # application from the builder stage, but not the build tools or extra libraries.
-FROM python:3.9-slim-bullseye
+# Using official Raspberry Pi OS Docker image with Python 3.11 and Debian 12 (bookworm)
+FROM dtcooper/raspberrypi-os:python3.11-bookworm
 
 WORKDIR /app
 
@@ -37,7 +38,7 @@ RUN useradd --create-home appuser
 USER appuser
 
 # Copy the virtual environment from the builder stage
-COPY --from=builder /usr/local/lib/python3.9/site-packages /usr/local/lib/python3.9/site-packages
+COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
 COPY --from=builder /usr/local/bin /usr/local/bin
 
 # Copy the configuration directory
