--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,16 @@ dependencies = ["Flask", "PyYAML"]
 [project.optional-dependencies]
 sensor = []
 actuator = ["smbus2"]
-test = ["pytest", "pytest-mock"]
+test = [
+    "pytest", 
+    "pytest-mock", 
+    "pytest-cov", 
+    "pytest-asyncio",
+    "requests",
+    "coverage",
+    "pylint",
+    "bandit"
+]
 rpi_hardware = ["RPi.GPIO"]
 
 [project.urls]
@@ -29,5 +38,54 @@ rpi_hardware = ["RPi.GPIO"]
 "Bug Tracker" = "https://github.com/your-username/fume-hood-sash-automation/issues"
 
 [project.scripts]
-hood_sash_automation_actuator = "hood_sash_automation.actuator.api_service:main"
+hood_sash_automation_actuator = "hood_sash_automation.api.api_service:main"
 hood_sash_automation_sensor = "hood_sash_automation.sensor.api_service:main"
+
+# Testing configuration
+[tool.pytest.ini_options]
+testpaths = ["docker-test/tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "-v",
+    "--strict-markers",
+    "--strict-config",
+    "--disable-warnings"
+]
+markers = [
+    "unit: Unit tests",
+    "integration: Integration tests", 
+    "e2e: End-to-end tests",
+    "slow: Slow running tests"
+]
+
+# Coverage configuration
+[tool.coverage.run]
+source = ["src/hood_sash_automation"]
+omit = [
+    "*/tests/*",
+    "*/venv/*",
+    "*/__pycache__/*"
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:"
+]
+
+# Linting configuration
+[tool.pylint.messages_control]
+disable = [
+    "import-error",
+    "no-member",
+    "too-few-public-methods",
+    "missing-docstring"
+]
+
+[tool.pylint.format]
+max-line-length = 100
